# Training_Python

./: .gitignore  README.md
Sample_Create_approachlist/: README.md  pyproject.toml
Sample_Create_approachlist/notebooks/: アプローチリストの作成.ipynb  データ生成.ipynb
Sample_Create_approachlist/output/: 直近未登録者に対するアプローチリスト.csv
Titanic/: README.md  pyproject.toml
Titanic/notebooks/: Modeling.ipynb  Visualization.ipynb
Titanic/output/: titanic_eda.html
Titanic/settings/: ListofTitles.xlsx  lgbm_parameters.yml  parameters.yml
Titanic/titanic_utils/: Baseline.py  Data_check.py  Modeling_rf.py  Processing.py  Visualization.py
linear regression/: Fielder_Data2023.csv  README.md  gradient_descent.ipynb  gradient_descent.py
