[tool.poetry]
name = "Create_approach_list"
version = "0.1.0"
description = ""
authors = ["User <sample@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
numpy = "^2.1.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
jupyterlab-code-formatter = "^3.0.2"
black = "^24.8.0"
isort = "^5.13.2"
japanize-matplotlib = "^1.1.3"
scikit-learn = "^1.5.1"
sweetviz = "^2.3.1"
plotly = "^5.24.0"
lightgbm = "^4.5.0"
stl = "^0.0.3"
numpy-stl = "^3.1.2"
catboost = "^1.2.5"
optuna = "^3.6.1"
xgboost = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
